Fixed button spacing

--- a/Streamsters/webpage/css/homepage.css
+++ b/Streamsters/webpage/css/homepage.css
@@ -35,8 +35,9 @@ p {
 
 .search img {
 		padding: 6px 5px;
-		margin-top: 8px;
-		margin-right: 16px;
+		margin-top: 16px;
+		margin-left: 8px;
+		margin-right: 8px;
 		height: 40px;
 		width: auto;
 }
@@ -68,7 +69,7 @@ p {
 		color: #1fbaed;
 }
 
-.streamers tr:hover {
+.streamers tr {
 		background-color: #29374a;
 }
 
